<?xml version="1.0"?>
<package>
  <name>ist_grasp_generation_msgs</name>
  <version>0.0.0</version>
  <description>ist grasp generation msgs</description>
  <maintainer email="rui@todo.todo">rui</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ist_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tabletop_object_segmentation_online</build_depend>
  <build_depend>perception_msgs</build_depend>

  <run_depend>ist_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tabletop_object_segmentation_online</run_depend>
  <run_depend>perception_msgs</run_depend>
</package>


