<?xml version="1.0"?>
<package>
  <name>ist_grasping_point_prediction</name>
  <version>0.0.0</version>
  <description>grasping_point_prediction</description>
  <maintainer email="ruifigueiredo@isr.ist.utl.pt">Rui P. de Figueiredo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ist_grasp_generation_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>ist_grasp_generation_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>eigen_conversions</run_depend>

</package>



